# hash-match

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: simple.rs
